--- a/pepper/templates/layouts/base.html
+++ b/pepper/templates/layouts/base.html
@@ -19,9 +19,9 @@
 {% if g.user.is_authenticated %}
 <nav class="header navbar navbar-toggleable">
   <a class="navbar-brand" href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='branding/logo.png') }}" height=60></a>
-  <ul class="nav navbar-nav">
+  <ul class="nav navbar-nav pull-right">
     {% block nav_items %}{% endblock %}
-    {{ nav_item('Logout', 'logout', a_classes='pull-right') }}
+    {{ nav_item('Logout', 'logout') }}
   </ul>
 </nav>
 {% endif %}
