--- a/pepper/templates/static_pages/index.html
+++ b/pepper/templates/static_pages/index.html
@@ -1,31 +1,17 @@
 {% extends 'layouts/head.html' %}
 {% block body %}
+<section class="content">
+  <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}"/>
+  <div class="center"><h3>Austin, TX | October 28-29, 2017</h3></div>
+  <div class="container">
+    <a href="{{ url_for('sign-up') }}"><button class="col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Sign Up">Sign Up</span></button></a>
+    <a href="{{ url_for('login') }}"><button class="col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-1 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Login">Log In</span></button></a>
+  </div>
+</section>
 
-    <section class="content">
-      <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}"/>
-      <div class="center"><h3>Austin, TX | October 22-23, 2016</h3></div>
-		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="You might need to create a MyMLH Account">Sign in with MyMLH</span></button></a>
-{#		<a href="{{ url_for('register_local') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Regular register">Sign up with email (Test)</span></button></a>#}
-		{% if config.FALLBACK_LOCAL_REGISTER == True %}
-		<a href="{{ url_for('login_local') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Only use if you had trouble registering originally">Alternative Sign In</span></button></a>
-	{% endif %}
-    </section>
-
-	<footer class="footer">
-		<div class="col-md-6 col-md-offset-3">
-			<a href="https://freetailhackers.com"><img class="img-responsive center-block" src="{{ url_for('static', filename='branding/badge.svg') }}" width=50></a>
-		</div>
-	</footer>
-
-{##}
-{##}
-{#    <img src="{{ url_for('static', filename='branding/logo.png') }}">#}
-{#	<h3>Austin, TX | October 22-23</h3>#}
-{#    <a href="{{ url_for('login') }}" class=""><button>Sign in with MyMLH</button></a>#}
-{##}
-{#	<footer>#}
-{#		<a href="https://www.facebook.com/HackTX"><i class="fa fa-facebook-official fa-2x"></i></a>#}
-{#		<a href="https://twitter.com/HackTX"><i class="fa fa-twitter fa-2x"></i></a>#}
-{#		<a href="https://github.com/hacktx"><i class="fa fa-github fa-2x"></i></a>#}
-{#	</footer>#}
+<footer class="footer">
+  <div class="col-md-6 col-md-offset-3">
+    <a href="https://freetailhackers.com"><img class="img-responsive center-block" src="{{ url_for('static', filename='branding/badge.svg') }}" width=50></a>
+  </div>
+</footer>
 {% endblock %}
