--- a/pepper/templates/users/dashboard/dashboard.html
+++ b/pepper/templates/users/dashboard/dashboard.html
@@ -1,5 +1,10 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/user_base.html' %}
 {% block content %}
-Dashboard
-    {{ user.fname }}
+<h1>Dashboard</h1>
+<div class="welcome">Welcome {{ user.fname }}!</div>
+<div class="app-status">Your application status is: <span class="user-status">{{ user.status }}</span>.</div>
+{% if next_steps %}
+<div class="next-steps">You still need to {{ next_steps.description }}. Please continue your application by clicking on the link below.</div>
+<a href="{{ next_steps.link }}" class="next-steps-button">{{ next_steps.link_text }}</a>
+{% endif %}
 {% endblock %}
