--- a/pepper/templates/users/sign_up.html
+++ b/pepper/templates/users/sign_up.html
@@ -5,16 +5,20 @@
   <div class="login-logo">
     <img src="{{ url_for('static', filename='branding/logo.png') }}" height=80>
   </div>
-  <h2>Sign up for {{ config.HACKATHON_NAME }}!</h2>
+  <h2>Create an Account</h2>
   <form action="" method="post">
-    <input type="text" placeholder="First Name" name="fname" required>
-    <input type="text" placeholder="Last Name" name="lname" required>
     <input type="email" placeholder="Email" name="email" required>
     <input type="password" placeholder="Password" name="password" required>
+    <input type="password" placeholder="Confirm Password" name="password-check" required>
     <div class="form-group">
       <button type="submit">Sign up</button>
     </div>
   </form>
-  <a href="{{ url_for('login') }}"><p>Already have an account?</p></a>
+  <p>Already have an account? Log in <a href="{{ url_for('login') }}">here</a>.</p>
+  <hr>
+  <p>Or connect with</p>
+  <a href="{{ mlh_oauth_url }}" class="my-mlh-link">
+    <button type="submit">Sign up with MyMLH</button>
+  </a>
 </div>
 {% endblock %}
