Clean up team code

--- a/pepper/templates/teams/team.html
+++ b/pepper/templates/teams/team.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/user_base.html' %}
 {% block content %}
 <!-- team.html -->
 <script src="{{ url_for('static', filename='js/jquery.validate.min.js') }}"></script>
