--- a/pepper/templates/layouts/user_base.html
+++ b/pepper/templates/layouts/user_base.html
@@ -1,5 +1,8 @@
 {% extends 'layouts/base.html' %}
 {% block nav_items %}
+{% if not required %}
 {{ nav_item('Home', 'dashboard') }}
+{{ nav_item('Manage Team', 'team') }}
 {{ nav_item('Edit Profile', 'edit-profile') }}
+{% endif %}
 {% endblock %}
