--- a/pepper/templates/users/login.html
+++ b/pepper/templates/users/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="center col-md-6 col-md-offset-3">
   <div class="login-logo">
-    <img src="{{ url_for('static', filename='branding/logo.png') }}" height=80>
+    <img src="{{ url_for('static', filename='branding/logo.svg') }}" width=300 height=80>
   </div>
   <h2>{{ config.HACKATHON_NAME }} Sign-in</h2>
   <form action="" method="post">
