--- a/pepper/templates/layouts/base.html
+++ b/pepper/templates/layouts/base.html
@@ -18,7 +18,7 @@
 </noscript>
 {% if g.user.is_authenticated %}
 <nav class="header navbar navbar-toggleable">
-  <a class="navbar-brand" href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='branding/logo.png') }}" height=60></a>
+  <a class="navbar-brand" href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='branding/logo.svg') }}" width=183 height=50></a>
   <ul class="nav navbar-nav pull-right">
     {% block nav_items %}{% endblock %}
     {{ nav_item('Logout', 'logout') }}
