--- a/pepper/templates/static_pages/index.html
+++ b/pepper/templates/static_pages/index.html
@@ -1,11 +1,13 @@
 {% extends 'layouts/head.html' %}
 {% block body %}
 <section class="content">
-  <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}"/>
-  <div class="center"><h3>Austin, TX | October 28-29, 2017</h3></div>
+  <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}" height="200" width="750"/>
+  <div class="spacing"></div>
+  <div class="center"><h2>Austin, TX | October 28-29, 2017</h2></div>
+  <div class="spacing"></div>
   <div class="container">
-    <a href="{{ url_for('sign-up') }}"><button class="col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Sign Up">Sign Up</span></button></a>
-    <a href="{{ url_for('login') }}"><button class="col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-1 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Login">Log In</span></button></a>
+    <a href="{{ url_for('sign-up') }}"><button class="col-md-2 col-md-offset-3 col-xs-4 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Sign Up">SIGN UP</span></button></a>
+    <a href="{{ url_for('login') }}"><button class="col-md-2 col-md-offset-2 col-xs-4 col-xs-offset-1 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Login">LOG IN</span></button></a>
   </div>
 </section>
 
