--- a/pepper/static/scss/main.scss
+++ b/pepper/static/scss/main.scss
@@ -130,7 +130,7 @@ body {
 	.action-button {
 	  float: left;
 	}
-	
+
   }
 }
 
@@ -547,6 +547,14 @@ form {
 	font-size: 1.5em;
 	line-height: 70px;
   }
+}
+
+.app-status {
+  text-align: center;
+}
+
+.welcome {
+  text-align: center;
 }
 
 .footer {
