--- a/pepper/templates/teams/team.html
+++ b/pepper/templates/teams/team.html
@@ -1,20 +1,19 @@
 {% extends 'layouts/user_base.html' %}
 {% block content %}
 <!-- team.html -->
-<script src="{{ url_for('static', filename='js/jquery.validate.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/validate.js') }}"></script>
+<script src="{{ url_for('static', filename='js/teams.js') }}"></script>
 
 <!-- Show information for people who already have a team -->
 <h1 class="center">Team</h1>
 <p class="center large-text">{{ team.tname }}</p>
 <h1 class="center">Teammates</h1>
-{% for user in team.users|sort(attribute='time_team_join') %}
+{% for user in team.users|multisort('time_team_join', 'id') %}
 <div class="center">
-	{% if user.is_leader %}
-	<p>{{ user.fname }} {{ user.lname }} ({{ user.email }}) - <b>Team Leader</b></p>
-	{% else %}
-	<p>{{ user.fname }} {{ user.lname }} ({{ user.email }})</p>
-	{% endif %}
+    {% if user.is_leader %} {# assume the first user is the leader #}
+    <p>{{ user.fname }} {{ user.lname }} ({{ user.email }}) - <b>Team Leader</b></p>
+    {% else %}
+    <p>{{ user.fname }} {{ user.lname }} ({{ user.email }})</p>
+    {% endif %}
 </div>
 {% endfor %}
 <div class="spacing"></div>
