--- a/pepper/templates/layouts/head.html
+++ b/pepper/templates/layouts/head.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %}{{ config.HACKATHON_NAME }}{% endblock %}</title>
-	<link rel="icon" type="image/png" sizes="32x32" href="https://hacktx.com/images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="https://hacktx.com/images/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://hacktx.com/images/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://hacktx.com/assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://hacktx.com/assets/favicon-16x16.png">
+        <link rel="mask-icon" href="https://hacktx.com/assets/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="viewport" content="initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
