--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -20,7 +20,7 @@
 					<table class="main" width="100%" cellpadding="0" cellspacing="0">
 						<tr>
 							<td class="alert alert-neutral">
-								<img src="https://d92c68liho4ps.cloudfront.net/static/branding/logo.png">
+								<img src="https://d92c68liho4ps.cloudfront.net/static/branding/logo.svg">
 							</td>
 						</tr>
 						<tr>
