Change email color

--- a/pepper/templates/emails/style.css
+++ b/pepper/templates/emails/style.css
@@ -215,7 +215,7 @@ a {
   background-color: #68B90F;
 }
 .alert.alert-neutral {
-    background-color: #124e78;
+    background-color: #22215b;
 }
 
 /* -------------------------------------
